--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <!-- ナビゲーションメニュー -->
         <nav>
-            <a href="./">English</a><a href="./jp">日本語</a>
+            <a href="./">English</a><a href="jp/index.html">日本語</a>
             <!--<ul>
                 <li><a href="#section1">セクション1</a></li>
                 <li><a href="#section2">セクション2</a></li>
