--- a/jp/index.html
+++ b/jp/index.html
@@ -16,7 +16,7 @@
 
         <!-- ナビゲーションメニュー -->
         <nav>
-            <a href="../">English</a><a href="./">日本語</a>
+            <a href="index.html">English</a><a href="./">日本語</a>
             <!--<ul>
                 <li><a href="#section1">セクション1</a></li>
                 <li><a href="#section2">セクション2</a></li>
