--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OSの公式ホームページ</title>
     <!-- 追加のCSSやJavaScriptのリンクをここに挿入する -->
-    <link rel="stylesheet" href="./css/HP.css">
+    <link rel="stylesheet" href="css/HP.css">
 </head>
 <body>
     <div class="padding">
