--- a/jp/index.html
+++ b/jp/index.html
@@ -6,6 +6,7 @@
     <title>OSの公式ホームページ</title>
     <!-- 追加のCSSやJavaScriptのリンクをここに挿入する -->
     <link rel="stylesheet" href="../css/HP.css">
+    <style>body{background-image: url("img/PencilOS_DesktopImg.png");}</style>
 </head>
 <body>
     <!--<div class="InLineBox">-->
