--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- 追加のCSSやJavaScriptのリンクをここに挿入する -->
     <link rel="stylesheet" href="css/HP.css">
     <style>
-        body{background-image: url("img/PencilOS_DesktopImg.png");}
+        body{background-image: url("./PencilOS_DesktopImg.png");}
     </style>
 </head>
 <body>
