--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                 ・Standard Japanese input and Japanese environment. <br>
                 ・Adding tens of thousands of applications using the apt command Ubuntu-like security and support. <br>
                 ・Updates are detected automatically and can be updated at any time. <br>
-                ・Please see the page below for details.</p> 
+                ・Please see the page below for details.</p>
+            <a half=""><img src="./img/en/can it be done.png"></a>
         </section>
 
         <section id="section4">
@@ -84,11 +85,13 @@
         <section id="section5">
             <h2>Download</h2>
             <p>You can download it from the page below.</p>
+            <a half=""><img src="./img/en/download.png"></a>
         </section>
 
         <section id="section6">
             <h2>Questions or problems?</h2>
             <p>You can ask questions and get answers from the page below.</p>
+            <a half=""><img src="./img/en/Form.png"></a>
         </section>
     </main>
 
