--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <section id="section5">
             <h2>Download</h2>
             <p>You can download it from the page below.</p>
-            <a half=""><img src="./img/en/download.png"></a>
+            <a half=""><img src="./img/en/Download.png"></a>
         </section>
 
         <section id="section6">
