--- a/Q&A/question.html
+++ b/Q&A/question.html
@@ -49,7 +49,7 @@
 <body>
     <div class="container">
         <h1>Question Form(質問フォーム)</h1>
-        <form action="./submit.html" method="post">
+        <form action="./submit.html">
             <label for="name">Name(名前):</label>
             <input type="text" id="qname" name="qname" required>
 
