--- a/Q&A/question.html
+++ b/Q&A/question.html
@@ -53,6 +53,9 @@
             <label for="name">Name(名前):</label>
             <input type="text" id="qname" name="qname" required>
 
+            <label for="name">Title(タイトル):</label>
+            <input type="text" id="qtitle" name="qtitle" required>
+
             <label for="question">Contents of question(質問内容):</label>
             <textarea id="qtext" name="qtext" rows="4" required></textarea>
 
