--- a/Q&A/submit.html
+++ b/Q&A/submit.html
@@ -11,6 +11,7 @@
         const urlParams = new URLSearchParams(queryString);
 
         const qwname = urlParams.get('qname');
+        const qwtitle = urlParams.get('qtitle')
         const qwtext = urlParams.get('qtext');
         const qwsupplement = urlParams.get('qsupplement');
         
