--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <section id="section6">
             <h2>Questions or problems?</h2>
             <p>You can ask questions and get answers from the page below.</p>
-            <a half=""><img src="./img/en/Form.png"></a>
+            <a half="./Q&A/"><img src="./img/en/Form.png"></a>
         </section>
     </main>
 
