--- a/Q&A/submit.html
+++ b/Q&A/submit.html
@@ -23,6 +23,7 @@
         // 書き込むデータを作成
         const data = {
             qname: qwname,
+            qtitle: qwtitle,
             qtext: qwtext,
             qsupplement: qwsupplement
         };
